# ai_whats_bot

./: company.txt  docker-compose.yml  envs.py  main.py  pyproject.toml  requirements.txt
ai_agent/: chain.py  graph.py  tools.py
data_base/: anotations.py  engine.py  models.py  orm_query.py
migrations/: env.py
migrations/versions/: 54204dcf56d6_initial.py  938b98947162_branch_description.py
