[project]
name = "ai_vtg_whats_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "langchain>=1.2.9",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
